# vps-manager

./: MIGRATION.md  README.md  SUMMARY.md
dns/: .gitignore  README.md  config.yaml  pyproject.toml
dns/terraform/: .gitignore  README.md  main.tf  records.tf
dns/terraform/modules/cloudflare/: records.tf
dns/terraform/modules/digitalocean/: records.tf
dns/terraform/modules/linode/: records.tf
dns/terraform/modules/netlify/: records.tf
dns/terraform/netlify/: main.tf  records.tf
dns/terraform/scripts/: apply.sh
dns/zones/: app.dev.yaml  example.com.yaml  potato1.yarden-zamir.com.yaml  potato10.yarden-zamir.com.yaml  potato11.yarden-zamir.com.yaml  potato12.yarden-zamir.com.yaml  potato14.yarden-zamir.com.yaml  potato15.yarden-zamir.com.yaml  potato18.yarden-zamir.com.yaml  potato19.yarden-zamir.com.yaml  potato2.yarden-zamir.com.yaml  potato3.yarden-zamir.com.yaml  potato4.yarden-zamir.com.yaml  potato5.yarden-zamir.com.yaml  potato6.yarden-zamir.com.yaml  potato7.yarden-zamir.com.yaml  potato8.yarden-zamir.com.yaml  potato9.yarden-zamir.com.yaml
docs/: dns-management.md  quick-start-dns.md  security-considerations.md  service-creation.md  setup-guide.md  traefik-routing.md  troubleshooting.md  unified-service-creation.md
scripts/: bootstrap.sh  create-service.py  create-service.sh  manage-accounts.py  test-bootstrap.sh
template/: Dockerfile  README.md  docker-compose.yml  env.example  (+1 more)
templates/template-python-fastapi/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
templates/template-python-fastapi/src/: main.py
(+35 files in other folders)
